--- a/src/index.scss
+++ b/src/index.scss
@@ -55,6 +55,10 @@ li::before {
     padding-top: 2.0rem;
 }
 
+#whoami-more {
+    visibility: hidden;
+}
+
 #whoami img {
     float: right;
     margin: 2px;
